src/objects/loan__Savings_Product_Accounting_Setup__c.object
<CustomObject>
    <fields>
        <fullName>loan__Business_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Event</label>
        <referenceTo>loan__Business_Event__c</referenceTo>
        <relationshipLabel>Savings Product Accounting Setup</relationshipLabel>
        <relationshipName>Savings_Product_Accounting_Setup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Default_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Rule</label>
        <referenceTo>loan__Accounting_Rule_Header__c</referenceTo>
        <relationshipLabel>Savings Product Accounting Setup</relationshipLabel>
        <relationshipName>Savings_Product_Accounting_Setup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Savings_Product__c</fullName>
        <label>Savings Product</label>
        <referenceTo>loan__Savings_Product__c</referenceTo>
        <relationshipLabel>Savings Product Accounting Setup</relationshipLabel>
        <relationshipName>Savings_Product_Accounting_Setup</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>loan__Use_Default_Setup__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Use Default Setup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__User_Defined_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Defined Rule</label>
        <referenceTo>loan__Accounting_Rule_Header__c</referenceTo>
        <relationshipLabel>Savings Product Accounting Setup (User Defined Rule)</relationshipLabel>
        <relationshipName>Savings_Product_Accounting_Setup1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Savings Product Accounting Setup</label>
    <nameField>
        <displayFormat>SPAID-{0000000000}</displayFormat>
        <label>Savings Product Accounting Setup ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Savings Product Accounting Setup</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>